# Cursor_Restaurant_App

./: ACTION_PANEL_AND_FIXES.md  ALL_FIXES_SUMMARY.md  ANDROID_BUILD_FIX_COMPLETE.md  ANDROID_BUILD_FIX_SUMMARY.md  ANIMATION_COMPATIBILITY_FIX.md  ANIMATION_FIX_DELIVERABLES.md  BEFORE_AFTER_FIXES.md  BUG_FIXES_SUMMARY.md  BUILD_COMMAND_FIX.md  BUILD_FIXES_APPLIED.md  COLORS_COMPATIBILITY_FIX.md  COLORS_FIX_DELIVERABLES.md  COMPATIBILITY_FIX_SUMMARY.md  DELIVERABLES.md  DELIVERABLES_ACTION_PANEL.md  DUPLICATE_KWARGS_FIX.md  FILTER_SYNCHRONIZATION.md  FILTER_SYNC_QUICK_GUIDE.md  FIXES_APPLIED.md  FIXES_COMPLETE.md  FIXES_SUMMARY.md  FLET_COMPATIBILITY_FIX.md  FLET_MIGRATION_GUIDE.md  FONTWEIGHT_COMPATIBILITY_FIX.md  FONTWEIGHT_FIX_DELIVERABLES.md  FUNCTIONAL_PARITY_AND_GLASSMORPHISM.md  FUNCTIONAL_REGRESSIONS_FIX.md  ICONS_COMPATIBILITY_FIX.md  MIGRATION_SUMMARY.md  QUICK_FIX_SUMMARY.md  QUICK_FIX_VERIFICATION.md  QUICK_REFERENCE.md  QUICK_START_FLET.md  QUICK_START_V2.md  QUICK_TEST_ACTION_PANEL.md  QUICK_TEST_ANIMATION_FIX.md  QUICK_TEST_COLORS_FIX.md  QUICK_TEST_FONTWEIGHT_FIX.md  QUICK_TEST_GUIDE.md  README.md  (+28 more)
.cursor/rules/python-app-vibe-coding/: RULE.md
backups/: restaurant_2025-12-19_13-26-28.db  restaurant_2025-12-19_14-38-24.db  restaurant_2025-12-19_15-23-14.db  restaurant_2025-12-23_11-47-56.db  restaurant_2026-02-17_17-39-38.db  restaurant_2026-02-18_10-54-06.db
build_src/: db.py  flet_app.py
build_src/core/: __init__.py  backup_service.py  storage.py  table_layout_service.py
build_src/ui_flet/: __init__.py  action_panel.py  admin_action_panel.py  admin_screen.py  admin_screen_v2.py  backup_action_panel.py  reservations_screen.py  reservations_screen_v2.py  reservations_screen_v3.py  section_action_panel.py  table_layout_screen.py  table_layout_screen_v2.py  user_settings_screen.py
core/: __init__.py  backup_service.py  reports.py  reservation_service.py  table_layout_service.py  time_utils.py
ui_flet/: action_panel.py  admin_action_panel.py  admin_screen_v2.py  app_state.py  backup_action_panel.py  compat.py  i18n.py  reservations_screen_v3.py  section_action_panel.py  table_layout_screen_v2.py  theme.py  theme_manager.py
